lab1/Code_word/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI
    8       | Specifier error SEMI
    9       | Specifier error
   10       | Specifier ExtDecList error

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList
   13           | error COMMA ExtDecList
   14           | VarDec COMMA error

   15 Specifier: TYPE
   16          | StructSpecifier

   17 StructSpecifier: STRUCT OptTag LC DefList RC
   18                | STRUCT Tag
   19                | STRUCT OptTag LC error RC

   20 OptTag: ID
   21       | %empty

   22 Tag: ID

   23 VarDec: ID
   24       | VarDec LB INT RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec

   30 ParamDec: Specifier VarDec

   31 CompSt: LC DefList StmtList RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | CompSt
   36     | RETURN Exp SEMI
   37     | IF LP Exp RP Stmt
   38     | IF LP Exp RP Stmt ELSE Stmt
   39     | WHILE LP Exp RP Stmt
   40     | error SEMI
   41     | Exp error
   42     | RETURN Exp error
   43     | IF LP error RP Stmt
   44     | IF LP error RP Stmt ELSE Stmt
   45     | WHILE LP error RP Stmt

   46 DefList: Def DefList
   47        | %empty

   48 Def: Specifier DecList SEMI
   49    | Specifier error SEMI
   50    | Specifier DecList error

   51 DecList: Dec
   52        | Dec COMMA DecList

   53 Dec: VarDec
   54    | VarDec ASSIGNOP Exp

   55 Exp: Exp ASSIGNOP Exp
   56    | Exp AND Exp
   57    | Exp OR Exp
   58    | Exp RELOP Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | Exp STAR Exp
   62    | Exp DIV Exp
   63    | LP Exp RP
   64    | MINUS Exp
   65    | NOT Exp
   66    | ID LP Args RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp DOT ID
   70    | ID
   71    | INT
   72    | FLOAT
   73    | Exp LB error RB
   74    | ID LP error RP

   75 Args: Exp COMMA Args
   76     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 10 13 14 19 27 40 41 42 43 44 45 49 50 73 74
INT (258) 24 71
FLOAT (259) 72
PLUS (260) 59
MINUS (261) 60 64
STAR (262) 61
DIV (263) 62
AND (264) 56
OR (265) 57
NOT (266) 65
LP (267) 25 26 27 37 38 39 43 44 45 63 66 67 74
RP (268) 25 26 27 37 38 39 43 44 45 63 66 67 74
LB (269) 24 68 73
RB (270) 24 68 73
LC (271) 17 19 31
RC (272) 17 19 31
STRUCT (273) 17 18 19
RETURN (274) 36 42
IF (275) 37 38 43 44
ELSE (276) 38 44
WHILE (277) 39 45
ID (278) 20 22 23 25 26 27 66 67 69 70 74
ASSIGNOP (279) 54 55
RELOP (280) 58
DOT (281) 69
TYPE (282) 15
SEMI (283) 4 5 7 8 34 36 40 48 49
COMMA (284) 12 13 14 28 52 75
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (35)
    on left: 11 12 13 14, on right: 4 10 12 13
Specifier (36)
    on left: 15 16, on right: 4 5 6 8 9 10 30 48 49 50
StructSpecifier (37)
    on left: 17 18 19, on right: 16
OptTag (38)
    on left: 20 21, on right: 17 19
Tag (39)
    on left: 22, on right: 18
VarDec (40)
    on left: 23 24, on right: 11 12 14 24 30 53 54
FunDec (41)
    on left: 25 26 27, on right: 6
VarList (42)
    on left: 28 29, on right: 25 28
ParamDec (43)
    on left: 30, on right: 28 29
CompSt (44)
    on left: 31, on right: 6 35
StmtList (45)
    on left: 32 33, on right: 31 32
Stmt (46)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45, on right: 32 37 38
    39 43 44 45
DefList (47)
    on left: 46 47, on right: 17 31 46
Def (48)
    on left: 48 49 50, on right: 46
DecList (49)
    on left: 51 52, on right: 48 50 52
Dec (50)
    on left: 53 54, on right: 51 52
Exp (51)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74, on right: 34 36 37 38 39 41 42 54 55 56 57 58 59 60 61 62
    63 64 65 68 69 73 75 76
Args (52)
    on left: 75 76, on right: 66 75


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   17 StructSpecifier: STRUCT . OptTag LC DefList RC
   18                | STRUCT . Tag
   19                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 21 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   15 Specifier: TYPE .

    $default  reduce using rule 15 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    8       | Specifier . error SEMI
    9       | Specifier . error
   10       | Specifier . ExtDecList error

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   16 Specifier: StructSpecifier .

    $default  reduce using rule 16 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   20 OptTag: ID .
   22 Tag: ID .

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 11

   17 StructSpecifier: STRUCT OptTag . LC DefList RC
   19                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 21


State 12

   18 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 18 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    8 ExtDef: Specifier error . SEMI
    9       | Specifier error .
   13 ExtDecList: error . COMMA ExtDecList

    SEMI   shift, and go to state 22
    COMMA  shift, and go to state 23

    $default  reduce using rule 9 (ExtDef)


State 16

   23 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 24

    $default  reduce using rule 23 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI
   10       | Specifier ExtDecList . error

    error  shift, and go to state 25
    SEMI   shift, and go to state 26


State 19

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   14           | VarDec . COMMA error
   24 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 27
    COMMA  shift, and go to state 28

    $default  reduce using rule 11 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 29

    CompSt  go to state 30


State 21

   17 StructSpecifier: STRUCT OptTag LC . DefList RC
   19                | STRUCT OptTag LC . error RC

    error   shift, and go to state 31
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 33
    Def              go to state 34


State 22

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 23

   13 ExtDecList: error COMMA . ExtDecList

    error  shift, and go to state 35
    ID     shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 19


State 24

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 38
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 25

   10 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 10 (ExtDef)


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   24 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 43


State 28

   12 ExtDecList: VarDec COMMA . ExtDecList
   14           | VarDec COMMA . error

    error  shift, and go to state 44
    ID     shift, and go to state 36

    ExtDecList  go to state 45
    VarDec      go to state 19


State 29

   31 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 34


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   19 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 47


State 32

   48 Def: Specifier . DecList SEMI
   49    | Specifier . error SEMI
   50    | Specifier . DecList error

    error  shift, and go to state 48
    ID     shift, and go to state 36

    VarDec   go to state 49
    DecList  go to state 50
    Dec      go to state 51


State 33

   17 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 52


State 34

   46 DefList: Def . DefList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $default  reduce using rule 47 (DefList)

    Specifier        go to state 32
    StructSpecifier  go to state 8
    DefList          go to state 53
    Def              go to state 34


State 35

   13 ExtDecList: error . COMMA ExtDecList

    COMMA  shift, and go to state 23


State 36

   23 VarDec: ID .

    $default  reduce using rule 23 (VarDec)


State 37

   13 ExtDecList: error COMMA ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


State 38

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 54


State 39

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 40

   30 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 55


State 41

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 56


State 42

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .

    COMMA  shift, and go to state 57

    $default  reduce using rule 29 (VarList)


State 43

   24 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 58


State 44

   13 ExtDecList: error . COMMA ExtDecList
   14           | VarDec COMMA error .

    COMMA  shift, and go to state 23

    $default  reduce using rule 14 (ExtDecList)


State 45

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 46

   31 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    ID      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 70
    Stmt      go to state 71
    Exp       go to state 72


State 47

   19 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 19 (StructSpecifier)


State 48

   49 Def: Specifier error . SEMI

    SEMI  shift, and go to state 73


State 49

   24 VarDec: VarDec . LB INT RB
   53 Dec: VarDec .
   54    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 27
    ASSIGNOP  shift, and go to state 74

    $default  reduce using rule 53 (Dec)


State 50

   48 Def: Specifier DecList . SEMI
   50    | Specifier DecList . error

    error  shift, and go to state 75
    SEMI   shift, and go to state 76


State 51

   51 DecList: Dec .
   52        | Dec . COMMA DecList

    COMMA  shift, and go to state 77

    $default  reduce using rule 51 (DecList)


State 52

   17 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 17 (StructSpecifier)


State 53

   46 DefList: Def DefList .

    $default  reduce using rule 46 (DefList)


State 54

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 55

   24 VarDec: VarDec . LB INT RB
   30 ParamDec: Specifier VarDec .

    LB  shift, and go to state 27

    $default  reduce using rule 30 (ParamDec)


State 56

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 57

   28 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 78
    ParamDec         go to state 42


State 58

   24 VarDec: VarDec LB INT RB .

    $default  reduce using rule 24 (VarDec)


State 59

   40 Stmt: error . SEMI

    SEMI  shift, and go to state 79


State 60

   71 Exp: INT .

    $default  reduce using rule 71 (Exp)


State 61

   72 Exp: FLOAT .

    $default  reduce using rule 72 (Exp)


State 62

   64 Exp: MINUS . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 80


State 63

   65 Exp: NOT . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 81


State 64

   63 Exp: LP . Exp RP

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 82


State 65

   36 Stmt: RETURN . Exp SEMI
   42     | RETURN . Exp error

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 83


State 66

   37 Stmt: IF . LP Exp RP Stmt
   38     | IF . LP Exp RP Stmt ELSE Stmt
   43     | IF . LP error RP Stmt
   44     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 84


State 67

   39 Stmt: WHILE . LP Exp RP Stmt
   45     | WHILE . LP error RP Stmt

    LP  shift, and go to state 85


State 68

   66 Exp: ID . LP Args RP
   67    | ID . LP RP
   70    | ID .
   74    | ID . LP error RP

    LP  shift, and go to state 86

    $default  reduce using rule 70 (Exp)


State 69

   35 Stmt: CompSt .

    $default  reduce using rule 35 (Stmt)


State 70

   31 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 87


State 71

   32 StmtList: Stmt . StmtList

    error   shift, and go to state 59
    INT     shift, and go to state 60
    FLOAT   shift, and go to state 61
    MINUS   shift, and go to state 62
    NOT     shift, and go to state 63
    LP      shift, and go to state 64
    LC      shift, and go to state 29
    RETURN  shift, and go to state 65
    IF      shift, and go to state 66
    WHILE   shift, and go to state 67
    ID      shift, and go to state 68

    RC  reduce using rule 33 (StmtList)

    CompSt    go to state 69
    StmtList  go to state 88
    Stmt      go to state 71
    Exp       go to state 72


State 72

   34 Stmt: Exp . SEMI
   41     | Exp . error
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    error     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99
    SEMI      shift, and go to state 100


State 73

   49 Def: Specifier error SEMI .

    $default  reduce using rule 49 (Def)


State 74

   54 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 101


State 75

   50 Def: Specifier DecList error .

    $default  reduce using rule 50 (Def)


State 76

   48 Def: Specifier DecList SEMI .

    $default  reduce using rule 48 (Def)


State 77

   52 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 49
    DecList  go to state 102
    Dec      go to state 51


State 78

   28 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 28 (VarList)


State 79

   40 Stmt: error SEMI .

    $default  reduce using rule 40 (Stmt)


State 80

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   64    | MINUS Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    LB    shift, and go to state 96
    DOT   shift, and go to state 99

    $default  reduce using rule 64 (Exp)


State 81

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   65    | NOT Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    LB   shift, and go to state 96
    DOT  shift, and go to state 99

    $default  reduce using rule 65 (Exp)


State 82

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   63    | LP Exp . RP
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 103
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99


State 83

   36 Stmt: RETURN Exp . SEMI
   42     | RETURN Exp . error
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    error     shift, and go to state 104
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99
    SEMI      shift, and go to state 105


State 84

   37 Stmt: IF LP . Exp RP Stmt
   38     | IF LP . Exp RP Stmt ELSE Stmt
   43     | IF LP . error RP Stmt
   44     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 106
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 107


State 85

   39 Stmt: WHILE LP . Exp RP Stmt
   45     | WHILE LP . error RP Stmt

    error  shift, and go to state 108
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 109


State 86

   66 Exp: ID LP . Args RP
   67    | ID LP . RP
   74    | ID LP . error RP

    error  shift, and go to state 110
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    RP     shift, and go to state 111
    ID     shift, and go to state 68

    Exp   go to state 112
    Args  go to state 113


State 87

   31 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 31 (CompSt)


State 88

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 89

   41 Stmt: Exp error .

    $default  reduce using rule 41 (Stmt)


State 90

   59 Exp: Exp PLUS . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 114


State 91

   60 Exp: Exp MINUS . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 115


State 92

   61 Exp: Exp STAR . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 116


State 93

   62 Exp: Exp DIV . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 117


State 94

   56 Exp: Exp AND . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 118


State 95

   57 Exp: Exp OR . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 119


State 96

   68 Exp: Exp LB . Exp RB
   73    | Exp LB . error RB

    error  shift, and go to state 120
    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 121


State 97

   55 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 122


State 98

   58 Exp: Exp RELOP . Exp

    INT    shift, and go to state 60
    FLOAT  shift, and go to state 61
    MINUS  shift, and go to state 62
    NOT    shift, and go to state 63
    LP     shift, and go to state 64
    ID     shift, and go to state 68

    Exp  go to state 123


State 99

   69 Exp: Exp DOT . ID

    ID  shift, and go to state 124


State 100

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 101

   54 Dec: VarDec ASSIGNOP Exp .
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99

    $default  reduce using rule 54 (Dec)


State 102

   52 DecList: Dec COMMA DecList .

    $default  reduce using rule 52 (DecList)


State 103

   63 Exp: LP Exp RP .

    $default  reduce using rule 63 (Exp)


State 104

   42 Stmt: RETURN Exp error .

    $default  reduce using rule 42 (Stmt)


State 105

   36 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 36 (Stmt)


State 106

   43 Stmt: IF LP error . RP Stmt
   44     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 125


State 107

   37 Stmt: IF LP Exp . RP Stmt
   38     | IF LP Exp . RP Stmt ELSE Stmt
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 126
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99


State 108

   45 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 127


State 109

   39 Stmt: WHILE LP Exp . RP Stmt
   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 128
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99


State 110

   74 Exp: ID LP error . RP

    RP  shift, and go to state 129


State 111

   67 Exp: ID LP RP .

    $default  reduce using rule 67 (Exp)


State 112

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB
   75 Args: Exp . COMMA Args
   76     | Exp .

    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96
    ASSIGNOP  shift, and go to state 97
    RELOP     shift, and go to state 98
    DOT       shift, and go to state 99
    COMMA     shift, and go to state 130

    $default  reduce using rule 76 (Args)


State 113

   66 Exp: ID LP Args . RP

    RP  shift, and go to state 131


State 114

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   59    | Exp PLUS Exp .
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    LB    shift, and go to state 96
    DOT   shift, and go to state 99

    $default  reduce using rule 59 (Exp)


State 115

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   60    | Exp MINUS Exp .
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    LB    shift, and go to state 96
    DOT   shift, and go to state 99

    $default  reduce using rule 60 (Exp)


State 116

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   61    | Exp STAR Exp .
   62    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    LB   shift, and go to state 96
    DOT  shift, and go to state 99

    $default  reduce using rule 61 (Exp)


State 117

   55 Exp: Exp . ASSIGNOP Exp
   56    | Exp . AND Exp
   57    | Exp . OR Exp
   58    | Exp . RELOP Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | Exp . STAR Exp
   62    | Exp . DIV Exp
   62    | Exp DIV Exp .
   68    | Exp . LB Exp RB
   69    | Exp . DOT ID
   73    | Exp . LB error RB

    LB   shift, and go to state 96
    DOT  shift, and go to state 99

    $default  reduce using rule 62 (Exp)


State 118
